--- a/Enhanced/css/style.css
+++ b/Enhanced/css/style.css
@@ -330,6 +330,37 @@ section{
     margin-top: 8%;
 }
 
+input[type=text], input[type=password], input[type=email], input[type=tel] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=tel]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+
+  .register-button {
+    background-color: #eedfc9;
+    color: black;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: 2px solid coral;
+    cursor: pointer;
+    width: 50%;
+    opacity: 0.9;
+    font-size: 20px; 
+  }
+  
+  .register-button:hover {
+    background-color: #ff9800;
+  }
+  
+
 /* media queries  */
 @media (max-width:991px){
 
