--- a/Enhanced/css/style.css
+++ b/Enhanced/css/style.css
@@ -83,6 +83,9 @@ section{
     position: fixed;
     top:0; left: 0; right: 0;
     z-index: 1000;
+    position: fixed; 
+    top: 0; 
+    width: 100%;
 }
 
 .header .logo img{
@@ -359,6 +362,32 @@ input[type=text], input[type=password], input[type=email], input[type=tel] {
   .register-button:hover {
     background-color: #ff9800;
   }
+
+  .float-container {
+    border: 3px solid #fff;
+    padding: 20px;
+    display: grid;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+/* Create two equal columns that sits next to each other */
+.column {
+  flex: 50%;
+  padding: 10px;
+  /* height: 600px; Should be removed. Only for demonstration */
+} 
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
   
 
 /* media queries  */
