--- a/Enhanced/css/style.css
+++ b/Enhanced/css/style.css
@@ -173,6 +173,13 @@ section{
     line-height: 1.8;
 }
 
+label {
+    font-size: 1.5rem;
+    line-height: 1.8;
+    color:#ccc;
+    padding:2rem 0;
+}
+
 .menu .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -274,6 +281,7 @@ section{
 
 .review .box-container .box{
     border:var(--border);
+    color:#ccc;
     text-align: center;
     padding:3rem 2rem;
 }
@@ -333,16 +341,16 @@ section{
     margin-top: 8%;
 }
 
-input[type=text], input[type=password], input[type=email], input[type=tel] {
-    width: 100%;
-    padding: 15px;
+input[type=text], input[type=number], input[type=password], input[type=email], input[type=tel] {
+    /* width: 100%; */
+    padding: 5px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
     background: #f1f1f1;
   }
   
-  input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, input[type=tel]:focus {
+  input[type=text]:focus, input[type=number]:focus, input[type=password]:focus, input[type=email]:focus, input[type=tel]:focus {
     background-color: #ddd;
     outline: none;
   }
