--- a/Enhanced/css/style.css
+++ b/Enhanced/css/style.css
@@ -338,7 +338,8 @@ section{
 
 .order{
     text-align: center;
-    margin-top: 8%;
+    margin-top: 1%;
+	padding: 2rem 7%;
 }
 
 input[type=text], input[type=number], input[type=password], input[type=email], input[type=tel] {
@@ -465,4 +466,70 @@ hr {
         font-size: 50%;
     }
 
+}
+
+/*menu buttons*/
+.btn {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: .9rem 3rem;
+  font-size: 1.7rem;
+  color: #fff;
+  background: var(--main-color);
+  cursor: pointer;
+  border-radius: 0.5rem;
+  border: none;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.btn:hover {
+  background-color: #af8c5e;
+  color: #fff;
+}
+
+.order-list {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
+        }
+		
+.order-item {
+            border: var(--border);
+            padding: 2rem;
+}
+
+.order-item h3 {
+            color: #fff;
+            font-size: 2rem;
+            padding-bottom: 1rem;
+}
+
+.price {
+    color: #fff;
+    font-size: 2.5rem;
+    padding: 0.5rem 0;
+}
+
+.price span {
+    font-size: 1.5rem;
+    text-decoration: line-through;
+    font-weight: lighter;
+}
+
+.clear-cart-btn {
+	margin-top: 1rem;
+    background-color: #af8c5e;
+    color: #fff;
+    padding: 0.9rem 3rem;
+    font-size: 1.7rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+    border: none;
+    transition: background-color 0.2s, color 0.2s;
+}
+
+.clear-cart-btn:hover {
+    background-color: #825e3b;
+    color: #fff;
 }
